# shaahid

./: AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md
.github/workflows/: ci.yml
crates/shaahid/: Cargo.toml  README.md
crates/shaahid-contract/: Cargo.toml  README.md
crates/shaahid-contract/examples/: adjudicate_ledger.rs
crates/shaahid-contract/src/: lib.rs
crates/shaahid-governance/: Cargo.toml  README.md
crates/shaahid-governance/src/: main.rs
crates/shaahid/src/: lib.rs
crates/shaahid/tests/: idempotency_gate.rs
docs/: development-flow.md  domain-language.md
openspec/: config.yaml
openspec/changes/establish-shaahid-shape/: design.md  proposal.md  tasks.md
openspec/changes/establish-shaahid-shape/specs/adjudication-contract/: spec.md
openspec/changes/establish-shaahid-shape/specs/quality-governance/: spec.md
openspec/specs/adjudication-contract/: spec.md
openspec/specs/public-facade/: spec.md
openspec/specs/quality-governance/: spec.md
