[package]
name = "shaahid-contract"
description = "The isolated core contract for Shaahid: sans-I/O idempotency adjudication."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish.workspace = true

[dependencies]
